2003-01-28  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnrtype/nr-type-w32.c: Implement ANSI charset and styles

	* src/libnrtype/nr-type-directory.c (nr_type_directory_build): Honour
	stretch attribute in searches

	* src/toolbox.c (sp_maintoolbox_create_toplevel): Broke constructor
	into two parts to allow multiple toolboxes

	* src/interface.c (sp_ui_view_show_toolbox): New method
	(sp_ui_view_dock_toolbox): Ditto
	(sp_ui_view_remove_toolbox): Ditto
	(sp_ui_view_menu): Added menu items for creating toolboxes
	(sp_create_window): Pack toplevel hbox into window

2003-01-26  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/art-utils.c (sp_vpath_from_bpath_transform_closepath): Moved
	array expansion to the right place (thanks to Lynn Kerby)

2003-01-25  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/xml-tree.c (sp_xml_tree_dialog): Allow horizontal scrollbar
	so we do not expand window infinitely

	* src/sp-use.c (sp_use_update): Implemented by MenTaLguY
	(sp_use_modified): Ditto

	* src/libnr/nr-path.c (nr_curve_bbox): Implement fast and exact bbox (thanks to Nathan)
	(nr_curve_bbox_wind_distance): Use exact bbox

2003-01-25  Nathan Hurst  <Nathan.Hurst@infotech.monash.edu.au>

	* src/desktop-snap.c: Fixed vector snapping code, replaced horizontal and
	vertical snapping with generic vector versions

2003-01-21  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/nodepath.c (create_curve): Use NR_MATRIX_DF_TRANSFORM_X (Thanks to
	MenTaLguY for finding these NRPointF/ArtPoint mismatches)

2003-01-20  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnrtype/nr-type-gnome.c (nr_typeface_gnome_new): Ditto

	* src/print.c (sp_print_preview_document): Fix gnome-print support
	(sp_print_document): Ditto

	* src/libnrtype/nr-type-xft.c (nr_type_xft_init): Added ebug printout

	* src/widgets/button.c (sp_button_button_press): Do not grab mouse
	(sp_button_button_release): Ditto

2003-01-19  Lauris Kaplinski  <lauris@kaplinski.com>
