@@ -1,0 +1,66 @@
+#ifndef __SP_CODEPAGES_H__
+#define __SP_CODEPAGES_H__
+
+/*
+ * Wrapper around Win32 font subsystem
+ *
+ * Author:
+ *   Lauris Kaplinski <lauris@kaplinski.com>
+ *
+ * Copyright (C) 2002 Lauris Kaplinski
+ *
+ * Released under GNU GPL, read the file 'COPYING' for more information
+ */
+
+/*
+ * You need actual codepage files
+ *
+ * These can be downloaded from sodipodi project webpage
+ * http://www.sodipodi.com/
+ * These go away, once I got unicode layer working
+ */
+
+extern const unsigned short tt_cp1250[];
+extern const unsigned int tt_cp1250_size;
+
+extern const unsigned short tt_cp1251[];
+extern const unsigned int tt_cp1251_size;
+
+extern const unsigned short tt_cp1252[];
+extern const unsigned int tt_cp1252_size;
+
+extern const unsigned short tt_cp1253[];
+extern const unsigned int tt_cp1253_size;
+
+extern const unsigned short tt_cp1254[];
+extern const unsigned int tt_cp1254_size;
+
+extern const unsigned short tt_cp1255[];
+extern const unsigned int tt_cp1255_size;
+
+extern const unsigned short tt_cp1256[];
+extern const unsigned int tt_cp1256_size;
+
+extern const unsigned short tt_cp1257[];
+extern const unsigned int tt_cp1257_size;
+
+extern const unsigned short tt_cp1258[];
+extern const unsigned int tt_cp1258_size;
+
+extern const unsigned short tt_cp874[];
+extern const unsigned int tt_cp874_size;
+
+extern const unsigned short tt_cp932[];
+extern const unsigned int tt_cp932_size;
+
+extern const unsigned short tt_cp936[];
+extern const unsigned int tt_cp936_size;
+
+extern const unsigned short tt_cp949[];
+extern const unsigned int tt_cp949_size;
+
+extern const unsigned short tt_cp950[];
+extern const unsigned int tt_cp950_size;
+
+
+#endif
